--- a/package.json
+++ b/package.json
@@ -44,35 +44,33 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@fec/remark-a11y-emoji": "^3.1.0",
 		"@fluentui/svg-icons": "^1.1.166",
 		"@sveltejs/adapter-vercel": "next",
-		"@sveltejs/kit": "^1.0.0-next.310",
+		"@sveltejs/kit": "next",
 		"@sveltejs/svelte-repl": "^0.2.2",
 		"@types/prismjs": "^1.26.0",
 		"autoprefixer": "^10.4.4",
 		"cssnano": "^5.1.7",
-		"mdsvex": "^0.9.8",
-		"mdsvexamples": "0.2.3",
+		"mdsvex": "^0.11.0",
 		"panzoom": "^9.4.2",
 		"postcss": "^8.4.12",
 		"postcss-variables-prefixer": "^1.1.1",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
 		"prism-svelte": "^0.4.7",
 		"prismjs": "^1.27.0",
-		"rehype-slug": "^5.0.1",
-		"remark-github": "^11.2.2",
-		"sass": "^1.50.0",
-		"svelte": "^3.47.0",
-		"svelte-check": "^2.6.0",
+		"rehype-slug": "^6.0.0",
+		"@fec/remark-a11y-emoji": "^4.0.0",
+		"remark-github": "^12.0.0",
+		"sass": "^1.77.8",
+		"svelte": "next",
+		"svelte-check": "^3.8.4",
 		"svelte-codesandbox": "^1.0.0",
-		"svelte-preprocess": "^4.10.5",
-		"svelte2tsx": "^0.4.14",
+		"svelte-preprocess": "^5.1.4",
 		"tslib": "^2.3.1",
-		"typescript": "^4.6.3",
-		"vite-node": "^0.1.27",
+		"typescript": "^5.5.4",
 		"vite-plugin-sveld": "^1.0.3"
+		
 	},
 	"dependencies": {
 		"focus-trap": "^6.7.3",
