--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "fluent-svelte",
-	"version": "1.6.0",
+	"version": "1.6.2",
 	"description": "A faithful implementation of Microsoft's Fluent Design System in Svelte.",
-	"homepage": "https://github.com/tropix126/fluent-svelte",
+	"homepage": "https://github.com/sciefylab/fluent-svelte",
 	"license": "MIT",
 	"author": {
-		"name": "tropix126",
-		"url": "https://github.com/tropix126/"
+		"name": "sciefylab",
+		"url": "https://github.com/sciefylab/"
 	},
 	"keywords": [
 		"design",
@@ -28,15 +28,25 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/tropix126/fluent-svelte.git"
+		"url": "https://github.com/sciefylab/fluent-svelte.git"
 	},
 	"bugs": {
-		"url": "https://github.com/tropix126/fluent-svelte/issues"
+		"url": "https://github.com/sciefylab/fluent-svelte/issues"
 	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"files": [
+		"dist"
+	],
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
 		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
+		"package": "svelte-kit sync && svelte-package",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -46,6 +56,7 @@
 	"devDependencies": {
 		"@fluentui/svg-icons": "^1.1.166",
 		"@sveltejs/adapter-vercel": "next",
+		"@sveltejs/package": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/svelte-repl": "^0.2.2",
 		"@types/prismjs": "^1.26.0",
@@ -61,6 +72,7 @@
 		"prismjs": "^1.27.0",
 		"rehype-slug": "^6.0.0",
 		"@fec/remark-a11y-emoji": "^4.0.0",
+		"remark-code-import": "^1.2.0",
 		"remark-github": "^12.0.0",
 		"sass": "^1.77.8",
 		"svelte": "next",
