--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fluent-svelte",
+	"name": "@sciefylab/fluent-svelte",
 	"version": "1.6.2",
 	"description": "A faithful implementation of Microsoft's Fluent Design System in Svelte.",
 	"homepage": "https://github.com/sciefylab/fluent-svelte",
